[package]
name = "containers-fun"
version = "0.1.0"
edition = "2024"

[dependencies]
async-pidfd = "0.1.5"
futures-util = "0.3.31"
itertools = "0.14.0"
nix = { version = "0.30.1", features = [
    "process",
    "sched",
    "user",
    "mount",
    "fs",
    "hostname",
] }
tokio = { version = "1.46.1", features = ["full"] }
zbus = "5.8.0"
